# qt-cmake-vscode

./: .gitignore  CMakeLists.txt  README.md  Template.pro  app.cmake
cmake/: AppInfo.cmake  Qt.cmake
macos/: PostInstall.cmake  mac-deploy.sh  mac-deploy.sh.in  notarize.sh.in  plist-agent.sh  png2ico.sh
qmake/: Template.pro
resources/: melodica.icns  melodica.ico.icns  resources.qrc  resources.rc
scripts/macos/: make-icns.sh  plist-agent.sh
src/: MainWindow.cpp  MainWindow.h  main.cpp
windows/: resources.rc.in
